--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
-Hello World
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <title>quekto</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="hero">
+            <h1>Welcome to My Chemistry Website</h1>
+            <p>Learn about chemistry in a fun and engaging way!</p>
+            <button>Get Started</button>
+        </section>
+        <section class="features">
+            <h2>Our Features</h2>
+            <ul>
+                <li>
+                    <i class="material-icons">school</i>
+                    <h3>Easy to Learn</h3>
+                    <p>Our website is designed to make learning chemistry easy and accessible for everyone.</p>
+                </li>
+                <li>
+                    <i class="material-icons">people</i>
+                    <h3>Community</h3>
+                    <p>Join our community of chemistry enthusiasts and connect with other learners.</p>
+                </li>
+                <li>
+                    <i class="material-icons">lightbulb_outline</i>
+                    <h3>Innovative</h3>
+                    <p>We use the latest technology and teaching methods to make chemistry fun and engaging.</p>
+                </li>
+            </ul>
+        </section>
+        <section class="cta">
+            <h2>Get Started Today</h2>
+            <p>Sign up for our newsletter and get access to exclusive content and updates.</p>
+            <form>
+                <input type="email" placeholder="Enter your email address">
+                <button>Sign Up</button>
+            </form>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2023 My Chemistry Website. All rights reserved.</p>
+    </footer>
+</body>
+
+</html>
