--- a/index.html
+++ b/index.html
@@ -5,57 +5,51 @@
     <meta charset="UTF-8">
     <title>quekto</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oxygen:400,500,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
+        <h1>My Chemistry Blog</h1>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
+                <li><a href="#">Posts</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section class="hero">
-            <h1>Welcome to My Chemistry Website</h1>
-            <p>Learn about chemistry in a fun and engaging way!</p>
-            <button>Get Started</button>
+            <h2>Welcome to my blog</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua.</p>
         </section>
-        <section class="features">
-            <h2>Our Features</h2>
-            <ul>
-                <li>
-                    <i class="material-icons">school</i>
-                    <h3>Easy to Learn</h3>
-                    <p>Our website is designed to make learning chemistry easy and accessible for everyone.</p>
-                </li>
-                <li>
-                    <i class="material-icons">people</i>
-                    <h3>Community</h3>
-                    <p>Join our community of chemistry enthusiasts and connect with other learners.</p>
-                </li>
-                <li>
-                    <i class="material-icons">lightbulb_outline</i>
-                    <h3>Innovative</h3>
-                    <p>We use the latest technology and teaching methods to make chemistry fun and engaging.</p>
-                </li>
-            </ul>
-        </section>
-        <section class="cta">
-            <h2>Get Started Today</h2>
-            <p>Sign up for our newsletter and get access to exclusive content and updates.</p>
-            <form>
-                <input type="email" placeholder="Enter your email address">
-                <button>Sign Up</button>
-            </form>
+        <section class="posts">
+            <h2>Recent Posts</h2>
+            <article>
+                <h3>Post title</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua.</p>
+            </article>
+            <article>
+                <h3>Post title</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua.</p>
+            </article>
+            <article>
+                <h3>Post title</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua.</p>
+            </article>
         </section>
     </main>
     <footer>
-        <p>&copy; 2023 My Chemistry Website. All rights reserved.</p>
+        <p>Copyright &copy; 2023 My Chemistry Blog</p>
     </footer>
 </body>
+
 
 </html>
