--- a/profile.html
+++ b/profile.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile Page</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto%20Sans%20JP&display=swap" , rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oxygen:400,500,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
+        <h1>My Chemistry Blog</h1>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">Posts</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Posts</a></li>
+                <li><a href="profile.html">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
         </nav>
     </header>
     <main>
         <div class="profile">
-            <img src="profile-pic.jpg" alt="Profile Picture">
-            <h1>Jane Doe</h1>
-            <h2>Chemist &amp; Educator</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet tellus et tellus vulputate
-                pellentesque. Aenean bibendum neque id aliquam consectetur. Vestibulum eget ex eget lectus maximus
-                fringilla vel ac felis. Mauris bibendum, ipsum eu malesuada fermentum, massa lorem rhoncus magna, vel
-                varius elit elit eget turpis. Nam aliquet tincidunt dui, sed malesuada ante ultrices vel.</p>
+            <!-- <img src="profile-pic.jpg" alt="Profile Picture"> -->
+            <h1>quekto</h1>
+            <h2>Chemist &amp; Twitter Master</h2>
             <ul>
-                <li><strong>Email:</strong> jane.doe@email.com</li>
-                <li><strong>Phone:</strong> 555-555-5555</li>
-                <li><strong>Location:</strong> San Francisco, CA</li>
+                <li><strong>Twitter:</strong><a href="https://twitter.com/quekto_"> @quekto_</a></li>
+                <li><strong>Affiliation:</strong> UTokyo</li>
             </ul>
         </div>
     </main>
     <footer>
-        <p>&copy; 2023 Jane Doe</p>
+        <p>&copy; 2023 quekto</p>
     </footer>
 </body>
 
