--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oxygen:400,500,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto%20Sans%20JP&display=swap", rel="stylesheet">
 </head>
 
 <body>
@@ -15,30 +16,19 @@
         <h1>My Chemistry Blog</h1>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">Posts</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="profile.html">About</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section class="hero">
-            <h2>Welcome to my blog</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.</p>
+            <h2>quekto</h2>
+            <p>quektoはSI接頭辞quectoからきています</p>
         </section>
         <section class="posts">
-            <h2>Recent Posts</h2>
-            <article>
-                <h3>Post title</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua.</p>
-            </article>
-            <article>
-                <h3>Post title</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua.</p>
-            </article>
+            <h2>ホーム</h2>
             <article>
                 <h3>Post title</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
@@ -47,7 +37,7 @@
         </section>
     </main>
     <footer>
-        <p>Copyright &copy; 2023 My Chemistry Blog</p>
+        <p>Copyright &copy; 2023 quekto</p>
     </footer>
 </body>
 
