--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 
 <body>
     <header>
-        <h1>My Chemistry Blog</h1>
+        <h1>quekto</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">Posts</a></li>
                 <li><a href="profile.html">About</a></li>
+                <li><a href="movie.html">Movies</a></li>
             </ul>
         </nav>
     </header>
