--- a/movie.html
+++ b/movie.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>quekto</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Movies</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,700&display=swap" rel="stylesheet">
@@ -14,16 +15,16 @@
 
 <body>
     <header>
-        <h1>quekto</h1>
+        <h1><a href="index.html" style="text-decoration: none;color: white;">quekto</a></h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Posts</a></li>
                 <li><a href="profile.html">About</a></li>
                 <li><a href="movie.html">Movies</a></li>
             </ul>
         </nav>
     </header>
+
     <main>
         <section class="posts_notmain">
             <h1>Movies</h1>
@@ -48,6 +49,29 @@
                 <p class="date">2023/2/26</p>
                 <p>終戦直前の広島で日本人2人が最も日本人らしい恋愛をする話</p>
             </article>
+            <article>
+                <h2>パーム・スプリングス / Palm Springs</h2>
+                <p class="date">2023/2/20</p>
+                <p>人がいっぱい死ぬコメディ</p>
+            </article>
+            <article>
+                <h2>バック・トゥー・ザ・フューチャーPART3 / Back to the Future PART III</h2>
+                <p class="date">2023/2/6</p>
+                <p>失敗から学ぶ気がさらさら無い爺さんの話</p>
+            </article>
+            <article>
+                <h2>バック・トゥー・ザ・フューチャーPART2 / Back to the Future PART II</h2>
+                <p class="date">2023/2/5</p>
+                <p>やらかすだろうなという所でやらかす話</p>
+            </article>
+            <article>
+                <h2>バック・トゥー・ザ・フューチャー / Back to the Future</h2>
+            <p class="date">2023/2/4</p>
+            <p>30年戻っても作中の「現在」には戻れません</p>
+            </article>
         </section>
     </main>
+    <footer>
+        <p>Copyright &copy; 2023 quekto</p>
+    </footer>
 </body>
