--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile Page</title>
+    <title>Profile</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto%20Sans%20JP&display=swap" , rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oxygen:400,500,700&display=swap" rel="stylesheet">
@@ -12,29 +12,29 @@
 
 <body>
     <header>
-        <h1>My Chemistry Blog</h1>
+        <h1>quekto</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Posts</a></li>
                 <li><a href="profile.html">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="movie.html">Movies</a></li>
             </ul>
         </nav>
     </header>
+
     <main>
-        <div class="profile">
+        <section class="posts_notmain">
+            <h1>About</h1>
             <!-- <img src="profile-pic.jpg" alt="Profile Picture"> -->
-            <h1>quekto</h1>
-            <h2>Chemist &amp; Twitter Master</h2>
+            <h2>くえくと / quekto</h2>
             <ul>
-                <li><strong>Twitter:</strong><a href="https://twitter.com/quekto_"> @quekto_</a></li>
-                <li><strong>Affiliation:</strong> UTokyo</li>
+                <li><strong>Twitter :</strong><a href="https://twitter.com/quekto_"> @quekto_</a></li>
+                <li><strong>Affiliation :</strong> UTokyo</li>
             </ul>
         </div>
     </main>
     <footer>
-        <p>&copy; 2023 quekto</p>
+        <p>Copyright &copy; 2023 quekto</p>
     </footer>
 </body>
 
