--- a/movie.html
+++ b/movie.html
@@ -29,6 +29,11 @@
         <section class="posts_notmain">
             <h1>Movies</h1>
             <article>
+                <h2>君に読む物語 / The Notebook</h2>
+                <p class="date">2023/4/8</p>
+                <p>おじいちゃんの朗読を聞く話</p>
+            </article>
+            <article>
                 <h2>生きる LIVING / LIVING</h2>
                 <p class="date">2023/4/4</p>
                 <p>ビル・ナイがパパ活して公園を作る話</p>
@@ -68,6 +73,31 @@
                 <h2>バック・トゥー・ザ・フューチャー / Back to the Future</h2>
             <p class="date">2023/2/4</p>
             <p>30年戻っても作中の「現在」には戻れません</p>
+            </article>
+            <article>
+                <h2>すずめの戸締まり</h2>
+                <p class="date">2023/2/2</p>
+                <p>東京が好きな人が東京を描く話</p>
+            </article>
+            <article>
+                <h2>ターミナル / The Terminal</h2>
+                <p class="date">2023/1/31</p>
+                <p>空港に秘密基地を作る話</p>
+            </article>
+            <article>
+                <h2>チャーリーとチョコレート工場 / Charlie and the Chocolate Factory</h2>
+                <p class="date">2023/1/9</p>
+                <p>後半パートがめっちゃ急ぎ足</p>
+            </article>
+            <article>
+                <h2>ホーム・アローン2 / Home Alone 2</h2>
+                <p class="date">2022/12/23</p>
+                <p>壊れる前のワールドトレードセンターが見れる</p>
+            </article>
+            <article>
+                <h2>おとなの恋は、まわり道 / Destination Wedding</h2>
+                <p class="date">2022/12/17</p>
+                <p>変人が観ると思想に親近感を抱く</p>
             </article>
         </section>
     </main>
