Changed a comment on a movie.

--- a/movie.html
+++ b/movie.html
@@ -31,7 +31,7 @@
             <article>
                 <h2>君に読む物語 / The Notebook</h2>
                 <p class="date">2023/4/8</p>
-                <p>おじいちゃんの朗読を聞く話</p>
+                <p>ドストレートに良い恋愛映画</p>
             </article>
             <article>
                 <h2>生きる LIVING / LIVING</h2>
