--- a/movie.html
+++ b/movie.html
@@ -29,6 +29,11 @@
         <section class="posts_notmain">
             <h1>Movies</h1>
             <article>
+                <h2>グッバイ、レーニン！ / Good Bye, Lenin!</h2>
+                <p class="date">2023/4/12</p>
+                <p>嘘に嘘を返し続ける話</p>
+            </article>
+            <article>
                 <h2>君に読む物語 / The Notebook</h2>
                 <p class="date">2023/4/8</p>
                 <p>ドストレートに良い恋愛映画</p>
