Added some previouse movies.

--- a/movie.html
+++ b/movie.html
@@ -104,6 +104,49 @@
                 <p class="date">2022/12/17</p>
                 <p>変人が観ると思想に親近感を抱く</p>
             </article>
+            <article>
+                <h2>ホーム・アローン / Home Alone</h2>
+                <p class="date">2022/12/15</p>
+                <p>子役がかわいい</p>
+            </article>
+            <article>
+                <h2>グリーンブック / Green Book</2>
+                <p class="date">2022/12/14</p>
+                <p>被差別集団の中での差別</p>
+            </article>
+            <article>
+                <h2>パターソン / Paterson</2>
+                <p class="date">2022/12/12</p>
+                <p>めちゃくちゃ面白い、なんの事件も起こらない話</p>
+            </article>
+            <article>
+                <h2>WAVES／ウェイブス / WAVES</2>
+                <p class="date">2022/11/30</p>
+                <p>家族が空中分解してなんやかんやする話</p>
+            </article>
+            <article>
+                <h2>ブラックパンサー/ワカンダ・フォーエバー / Black Panther: Wakanda Forever</2>
+                <p class="date">2022/11/29</p>
+                <p>近年稀に見るトンチキ舞空術</p>
+            </article>
+            <article>
+                <h2>DUNE/デューン 砂の惑星 / DUNE</2>
+                <p class="date">2022/11/24</p>
+                <p>人が砂漠であっちこっち行ってドンパチする話</p>
+            </article>
+            <article>
+                <h2>クーパー家の晩餐会 / Love the Coopers </2>
+                <p class="date">2022/11/17</p>
+                <p>結局人間は嘘に頼ってしまうっていう話</p>
+            </article>
+            <article>
+                <h2>アイ・フィール・プリティ！ 人生最高のハプニング / I Feel Pretty</2>
+                <p class="date">2022/11/10</p>
+                <p>最後の最後で求められたオチを提出していただく話
+                    エンディング曲が良い
+                </p>
+            </article>
+            
         </section>
     </main>
     <footer>
