--- a/movie.html
+++ b/movie.html
@@ -110,37 +110,37 @@
                 <p>子役がかわいい</p>
             </article>
             <article>
-                <h2>グリーンブック / Green Book</2>
+                <h2>グリーンブック / Green Book</h2>
                 <p class="date">2022/12/14</p>
                 <p>被差別集団の中での差別</p>
             </article>
             <article>
-                <h2>パターソン / Paterson</2>
+                <h2>パターソン / Paterson</h2>
                 <p class="date">2022/12/12</p>
                 <p>めちゃくちゃ面白い、なんの事件も起こらない話</p>
             </article>
             <article>
-                <h2>WAVES／ウェイブス / WAVES</2>
+                <h2>WAVES／ウェイブス / WAVES</h2>
                 <p class="date">2022/11/30</p>
                 <p>家族が空中分解してなんやかんやする話</p>
             </article>
             <article>
-                <h2>ブラックパンサー/ワカンダ・フォーエバー / Black Panther: Wakanda Forever</2>
+                <h2>ブラックパンサー/ワカンダ・フォーエバー / Black Panther: Wakanda Forever</h2>
                 <p class="date">2022/11/29</p>
                 <p>近年稀に見るトンチキ舞空術</p>
             </article>
             <article>
-                <h2>DUNE/デューン 砂の惑星 / DUNE</2>
+                <h2>DUNE/デューン 砂の惑星 / DUNE</h2>
                 <p class="date">2022/11/24</p>
                 <p>人が砂漠であっちこっち行ってドンパチする話</p>
             </article>
             <article>
-                <h2>クーパー家の晩餐会 / Love the Coopers </2>
+                <h2>クーパー家の晩餐会 / Love the Coopers </h2>
                 <p class="date">2022/11/17</p>
                 <p>結局人間は嘘に頼ってしまうっていう話</p>
             </article>
             <article>
-                <h2>アイ・フィール・プリティ！ 人生最高のハプニング / I Feel Pretty</2>
+                <h2>アイ・フィール・プリティ！ 人生最高のハプニング / I Feel Pretty</h2>
                 <p class="date">2022/11/10</p>
                 <p>最後の最後で求められたオチを提出していただく話
                     エンディング曲が良い
