--- a/movie.html
+++ b/movie.html
@@ -29,6 +29,17 @@
         <section class="posts_notmain">
             <h1>Movies</h1>
             <article>
+                <h2>テーラー　人生の仕立て屋 / Tailor</h2>
+                <p class="date">2023/4/20</p>
+                <p>時代の変化に流される話</p>
+            </article>
+
+            <article>
+                <h2>50回目のファースト・キス / 50 First Dates</h2>
+                <p class="date">2023/4/17</p>
+                <p>自分に反抗する相手を全力で手に入れようとする話</p>
+            </article>
+            <article>
                 <h2>グッバイ、レーニン！ / Good Bye, Lenin!</h2>
                 <p class="date">2023/4/12</p>
                 <p>嘘に嘘を返し続ける話</p>
