Added book list.

--- a/profile.html
+++ b/profile.html
@@ -29,7 +29,8 @@
             <h2>くえくと / quekto</h2>
             <ul>
                 <li><strong>Twitter :</strong><a href="https://twitter.com/quekto_"> @quekto_</a></li>
-                <li><strong>Affiliation :</strong> UTokyo</li>
+                <li><strong>Affiliation :</strong> UTokyo, Faculty of Engineering, Department of Chemical System Engineering</li>
+                <li><strong>読んだ本 : </strong><a href="https://bookmeter.com/users/1380950">読書メーター</a></li> 
             </ul>
         </div>
     </main>
