Added some movies.

--- a/movie.html
+++ b/movie.html
@@ -29,6 +29,16 @@
         <section class="posts_notmain">
             <h1>Movies</h1>
             <article>
+                <h2>ラブ・アクチュアリー / Love Actually</h2>
+                <p class="date">2023/5/12</p>
+                <p>ヒュー・グラントがおちゃらけ英国首相を演じる話</p>
+            </article>
+            <article>
+                <h2>ビフォア・サンセット / Before Sunset</h2>
+                <p class="date" >2023/4/27</p>
+                <p>愛情の奔流を、どうにかして現実で覆い隠そうとする2人の話</p>
+            </article>
+            <article>
                 <h2>テーラー　人生の仕立て屋 / Tailor</h2>
                 <p class="date">2023/4/20</p>
                 <p>時代の変化に流される話</p>
@@ -52,7 +62,7 @@
             <article>
                 <h2>生きる LIVING / LIVING</h2>
                 <p class="date">2023/4/4</p>
-                <p>ビル・ナイがパパ活して公園を作る話</p>
+                <p>ビル・ナイがパパ活して公園を作る話　"I wanted to be a gentleman."</p>
             </article>
             <article>
                 <h2>THE GUILTY/ギルティ / Den skyldige</h2>
