--- a/movie.html
+++ b/movie.html
@@ -167,6 +167,32 @@
                     エンディング曲が良い
                 </p>
             </article>
+            <article>
+                <h2>フォー・ウェディング / Four Wddings and a Funeral</h2>
+                <p class="date">2022/10/31</p>
+                <p>邦題には納得いかないが、ヒロインが激かわいいので許す</p>
+            </article>
+            <article>
+                <h2>アバウト・タイム〜愛おしい時間について〜 / About Time</h2>
+                <p class="date">2022/10/30</p>
+                <p>人生の有限性について</p>
+            </article>
+            <article>
+                <h2>ムーンライズ・キングダム / Moonrise Kingdom</h2>
+                <p class="date">2022/10/21</p>
+                <p>「微笑ましい」でまとめるには少し激しめなサバイバル逃避行をする話</p>
+            </article>
+            <article>
+                <h2>プラダを着た悪魔 / The Devil Wears Prada</h2>
+                <p class="date">2022/10/17</p>
+                <p>職人気質の謎人間はどこにでもおるんやなという気持ち</p>
+            </article>
+            <article>
+                <h2>ファンタスティック・ビーストと黒い魔法使いの誕生 / Fantastic Beasts:
+                The Crimes of Grindelwald</h2>
+                <p class="date"></p>
+            </article>
+            
             
         </section>
     </main>
