--- a/movie.html
+++ b/movie.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movies</title>
+    <title>quekto - Movies</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,700&display=swap" rel="stylesheet">
@@ -191,6 +191,21 @@
                 <h2>ファンタスティック・ビーストと黒い魔法使いの誕生 / Fantastic Beasts:
                 The Crimes of Grindelwald</h2>
                 <p class="date"></p>
+            </article>
+            <article>
+                <h2>夏のトンネル、さよならの出口</h2>
+                <p class="date">2022/9/22</p>
+                <p>短い中で更に時間稼ぎしてた</p>
+            </article>
+            <article>
+                <h2>恋人まで１％</h2>
+                <p class="date">2022/9/2</p>
+                <p>見てるとこちらまで恥ずかしくなってしまった</p>
+            </article>
+            <article>
+                <h2>アナザーラウンド</h2>
+                <p class="date">2022/7/29</p>
+                <p><b>飲んだくれマッツ・ミケルセン最高！！！！！</b></p>
             </article>
             
             
