--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
+    <title>quekto - Profile</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto%20Sans%20JP&display=swap" , rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oxygen:400,500,700&display=swap" rel="stylesheet">
