--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
         <section class="posts">
             <h2>ホーム</h2>
             <article>
-                <h3>Post title</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua.</p>
+                <ul>
+                    <li><a href="/profile.html">Profile</a></li>
+                    <li><a href="/movie.html">Movies</a></li>
+                </ul>
             </article>
         </section>
     </main>
