added some content in the profile page.

--- a/profile.html
+++ b/profile.html
@@ -29,9 +29,15 @@
             <h2>くえくと / quekto</h2>
             <ul>
                 <li><strong>Twitter :</strong><a href="https://twitter.com/quekto_"> @quekto_</a></li>
-                <li><strong>Affiliation :</strong> UTokyo, Faculty of Engineering, Department of Chemical System Engineering</li>
+                <li><strong>Affiliation :</strong> 4th year at the Department of Chemical System Engineering, Faculty of Engineering, UTokyo </li>
                 <li><strong>読んだ本 : </strong><a href="https://bookmeter.com/users/1380950">読書メーター</a></li> 
+                <li><strong>観た映画：</strong><a href="/movie.html">Movies</a></li>
+                <li><strong>作ったプレイリスト：</strong></li>
             </ul>
+            <iframe style="border-radius:12px"
+                src="https://open.spotify.com/embed/playlist/3tFnmJT3aNn4VBbbBOJjYs?utm_source=generator&theme=0" width="100%"
+                height="352" frameBorder="0" allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
     </main>
     <footer>
