--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <h2>ホーム</h2>
             <article>
                 <ul>
-                    <li><a href="/profile.html">Profile</a></li>
-                    <li><a href="/movie.html">Movies</a></li>
+                    <li><a href="profile.html">Profile</a></li>
+                    <li><a href="movie.html">Movies</a></li>
                 </ul>
             </article>
         </section>
