--- a/profile.html
+++ b/profile.html
@@ -18,6 +18,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="profile.html">About</a></li>
                 <li><a href="movie.html">Movies</a></li>
+                <li><a href="coffee.html">Coffee</a></li>
             </ul>
         </nav>
     </header>
