--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </section>
     </main>
     <footer>
-        <p>Copyright &copy; 2023 quekto</p>
+        <p>Copyright &copy; 2023-2024 quekto</p>
     </footer>
 </body>
 
