delete coffee page from all pages.

--- a/movie.html
+++ b/movie.html
@@ -21,8 +21,6 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="profile.html">About</a></li>
                 <li><a href="movie.html">Movies</a></li>
-                <li><a href="coffee.html">Coffee</a></li>
-
             </ul>
         </nav>
     </header>
@@ -251,6 +249,6 @@
         </section>
     </main>
     <footer>
-        <p>Copyright &copy; 2023 quekto</p>
+        <p>Copyright &copy; 2023-2024 quekto</p>
     </footer>
 </body>
